test/oscar/compiler/errors/msgParamMismatch.oscar
message testNow()


actor Tester() {

  receive = {
    | testNow() => {
        Println("Error");
      }
    | die() => {
      }
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>();
  message<testNow>("error", 1) |> tester;
  message<die>() |> tester;
}
